--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -1,6 +1,6 @@
 html {
-  color: $color-black;
-  background: $color-white;
+  background: $color-black;
+  color: $color-white;
   font-family: $font-Calibre;
   overflow: hidden;
   position: fixed;
