--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -1,16 +1,18 @@
 .home {
-  height: var(--100vh);
+    height: var(--100vh);
+    position: relative;
+    z-index: z('page');
 }
 
 .home__wrapper {
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+//   left: 0;
+//   position: absolute;
+//   top: 0;
+//   width: 100%;
+//   height: 100%;
+//   display: flex;
+//   align-items: center;
+//   flex-direction: column;
 }
 
 canvas {
