--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -5,14 +5,13 @@
 }
 
 .home__wrapper {
-//   left: 0;
-//   position: absolute;
-//   top: 0;
-//   width: 100%;
-//   height: 100%;
-//   display: flex;
-//   align-items: center;
-//   flex-direction: column;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 canvas {
